--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest -v
+          PYTHONPATH=. pytest -v
 
       - name: Build Docker image
         run: |
